Versão JAVA / Código Deprecado:
- alterando versão do Java para 14;
- alterando código deprecado;